# gstreamer-test-ayoda

./: CMakeLists.txt  plugin.c  pool.c  pool.h  sink.c  sink.h
